// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkspaceDeclarations (multi root) should create declarations for different workspaces 1`] = `
Array [
  DeclarationInfo {
    "declaration": ClassDeclaration {
      "accessors": Array [],
      "end": 43,
      "isExported": true,
      "methods": Array [],
      "name": "ClassDeclarationWorkspace2",
      "properties": Array [],
      "start": 0,
    },
    "from": "/declarations/declarations",
  },
]
`;

exports[`WorkspaceDeclarations (multi root) should create declarations for different workspaces 2`] = `
Array [
  DeclarationInfo {
    "declaration": ClassDeclaration {
      "accessors": Array [],
      "end": 43,
      "isExported": true,
      "methods": Array [],
      "name": "ClassDeclarationWorkspace3",
      "properties": Array [],
      "start": 0,
    },
    "from": "/declarations/declarations",
  },
]
`;

exports[`WorkspaceDeclarations (multi root) should index correct types from @types 1`] = `
Array [
  DeclarationInfo {
    "declaration": InterfaceDeclaration {
      "end": 79,
      "isExported": true,
      "methods": Array [],
      "name": "InterfaceFromTypes",
      "properties": Array [],
      "start": 40,
    },
    "from": "MyModuleFromTypes",
  },
  DeclarationInfo {
    "declaration": ModuleDeclaration {
      "end": 81,
      "name": "mymodulefromtypes",
      "start": 0,
    },
    "from": "MyModuleFromTypes",
  },
]
`;

exports[`WorkspaceDeclarations (multi root) should index correct types from node_modules 1`] = `
Array [
  "node-module",
]
`;

exports[`WorkspaceDeclarations (multi root) should return the correct files for different workspaces 1`] = `
Array [
  "declarations.ts",
]
`;

exports[`WorkspaceDeclarations (multi root) should return the correct files for different workspaces 2`] = `
Array [
  "declarations.ts",
]
`;
